<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="30dp"
    tools:context=".main_ui.event_application_form.ApplicationFormActivity"
    android:orientation="vertical"
    android:id="@+id/container"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="Application"
            android:textSize="34sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/subtitle_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title_text"
            android:paddingVertical="15dp"
            android:text="\@Event name here"
            android:textSize="26sp"
            android:textStyle="bold"/>

    </RelativeLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">


        <ImageButton
            android:id="@+id/profile_image"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/circle_shape"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:scaleType="centerCrop"
            android:clipToOutline="true" />


        <TextView
            android:id="@+id/user_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="hosted by @user_name"
            android:textSize="18dp"
            android:paddingVertical="10dp"
            android:paddingLeft="10dp"
            app:layout_constraintStart_toEndOf="@id/profile_image"
            app:layout_constraintTop_toTopOf="@id/profile_image"
            app:layout_constraintBottom_toBottomOf="@id/profile_image"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/contact_hint"
        style="@style/TextField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:text="Contact"
        android:layout_marginTop="10dp"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/applicant_contact"
        style="@style/EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:inputType="text"
        android:hint="KakaoID / Email / Phone Number"/>

    <TextView
        android:id="@+id/message_hint"
        style="@style/TextField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:text="Message to host"
        android:layout_marginTop="10dp"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/applicant_message"
        style="@style/EditText"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="10dp"
        android:gravity="top"
        android:hint="Leave a short message to your host!"
        android:inputType="textMultiLine"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/send_application_button"
        android:onClick="onSendApplicationEvent"
        style="@style/PositiveButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Send application"
        android:layout_gravity="bottom"/>

</LinearLayout>