<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/signupRootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".authenticate.register.SignUpActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontalGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />

    <TextView
        android:id="@+id/signupText"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="Register"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintHeight_percent="0.11"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/horizontalGuideline" />

    <TextView
        android:id="@+id/nameText"
        style="@style/TextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Name"
        app:layout_constraintBottom_toTopOf="@id/name"
        app:layout_constraintTop_toBottomOf="@id/signupText" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/name"
        style="@style/EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="left"
        android:hint="Name"
        android:inputType="text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nameText" />

    <TextView
        android:id="@+id/emailText"
        style="@style/TextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Email"
        app:layout_constraintBottom_toTopOf="@id/email"
        app:layout_constraintTop_toBottomOf="@id/name" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/email"
        style="@style/EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:hint="Email"
        android:inputType="text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailText" />

    <TextView
        android:id="@+id/passwordText"
        style="@style/TextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Password"
        app:layout_constraintBottom_toTopOf="@id/password"
        app:layout_constraintTop_toBottomOf="@id/email" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/password"
        style="@style/EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:hint="Password"
        android:inputType="textPassword"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordText" />

    <TextView
        android:id="@+id/pwConfirmationText"
        style="@style/TextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Confirm Password"
        app:layout_constraintBottom_toTopOf="@id/password_confirm"
        app:layout_constraintTop_toBottomOf="@id/password" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/password_confirm"
        style="@style/EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:hint="Confirm password"
        android:inputType="textPassword"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pwConfirmationText" />

    <TextView
        android:id="@+id/alert"
        style="@style/RedItalicText"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:gravity="center"
        android:paddingVertical="5dp"
        app:layout_constraintHeight_percent="0.05"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_confirm" />

    <androidx.appcompat.widget.AppCompatButton
        style="@style/PositiveButton"
        android:background="@color/green1"
        android:onClick="onUploadProfilePicture"
        android:id="@+id/upload_profile_pic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@id/alert"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="Upload Profile Picture"
        />

    <TextView
        android:id="@+id/optional"
        style="@style/TextField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_marginLeft="10dp"
        android:text="*Optional"
        app:layout_constraintTop_toBottomOf="@id/alert"
        app:layout_constraintLeft_toRightOf="@id/upload_profile_pic" />

    <androidx.appcompat.widget.AppCompatButton
        android:onClick="onSignUp"
        android:id="@+id/signup"
        style="@style/PositiveButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Create Account"
        app:layout_constraintHeight_percent="0.11"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/upload_profile_pic" />


</androidx.constraintlayout.widget.ConstraintLayout>